# supa-dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  input.css
assets/: tailwind.css
src/: main.rs
src/client/: README.md  auth.rs
src/components/: auth.rs  button.rs  input.rs  layout.rs  mod.rs
src/pages/: home.rs  login.rs  mod.rs  protected.rs  routes.rs
src/server/: auth.rs  database.rs
