[package]
name = "supa-dioxus"
version = "0.1.0"
authors = ["Hazel <hazelrtech@gmail.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General deps safe for server or client
gloo = "0.11.0"
supabase-js-rs = "0.1.3"
serde_json = "1.0.116"
serde-wasm-bindgen = "*"
wasm-bindgen = "*"
serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.5", features = ["fullstack", "router"] }
tracing = "0.1.40"
dioxus-logger = "0.5.0"

# Client OR Server Deps. Specify which in [features]
tokio = { version = "1.37.0", features = ["full"], optional = true }
sea-orm = { version = "0.12.15", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-uuid",
  "with-chrono",
  "with-json"
], optional = true}
http = {version = "1.1.0", optional = true}
postgrest = {version = "1.6.0", optional = true}
dotenv = { version = "0.15.0", optional = true }
uuid = { version = "1.8.0", features = ["serde", "v4"]}
manganis = "0.2.2"

[build-dependencies]
dotenv = "0.15.0"

[features]
default = []
server = ["dioxus/axum", "sea-orm", "tokio", "http", "postgrest", "dotenv"]
web = ["dioxus/web"]
dotenv = ["dep:dotenv"]
